# open-nos-as5610

./: .gitignore  BUILD.md  CMakeLists.txt  LICENSE  PLAN.md  README.md  STATUS.md  STATUS_REPORT.md  WHY_STUBS.md
bde/: Makefile  README.md  nos_kernel_bde.c  nos_user_bde.c
boot/: README.md  as5610_52x_full.dts  as5610_52x_minimal.dts  build-fit.sh  nos-noinitramfs.its  nos.its
boot/kernel-patches/: README.md
docs/: ASIC_CHECK_10.1.1.233.md  EDGECORE_AS5610_ONIE_PARTITIONS.md  FRR-PPC32.md  ONIE_INSTALLER_BUILD_GUIDE.md  ONIE_INSTALLER_READINESS.md  SCHAN_DISCOVERY_REPORT.md  SCHAN_INVESTIGATION_STATUS.md  _config.yml  index.md
docs/reverse-engineering/: AS5610_52X_ECOSYSTEM_AND_EXTERNAL_REFERENCES.md  ONLP_AS5610_52X_PLATFORM_REFERENCE.md  OPENMDK_BCM56846_REFERENCE.md  XLPORT_RESET_AND_SCHAN_ANALYSIS.md
etc/nos/: README-CAPTURE.md  config.bcm  rc.datapath_0  rc.soc
initramfs/: build.sh  init  nos-init.c
onie-installer/: README.md  build.sh  install.sh
onie-installer/cumulus/init/accton_as5610_52x/: platform.conf  platform.fdisk
onie-installer/uboot_env/: as5610_52x.platform.inc  common_env.inc
platform/: README.md
platform/drivers/: Makefile  accton_as5610_cpld.c  accton_as5610_cpld.ko
platform/platform-mgrd/: Makefile  README.md  main.c
rootfs/: README.md  build.sh
rootfs/overlay/etc/: fstab
rootfs/overlay/etc/frr/: daemons  frr.conf
rootfs/overlay/etc/network/: interfaces
rootfs/overlay/etc/sv/nos-bde-modules/: run
rootfs/overlay/etc/sv/nos-boot-success/: run
rootfs/overlay/etc/sv/nos-switchd/: run
rootfs/overlay/etc/sv/platform-mgrd/: run
rootfs/overlay/etc/systemd/system/: nos-bde-modules.service  nos-boot-success.service  nos-switchd.service  platform-mgrd.service
rootfs/overlay/root/.ssh/: authorized_keys
rootfs/overlay/usr/sbin/: nos-boot-success.sh
scripts/: asic_reg_read.py  build-on-build-server.sh  build-onie-image.sh  extract-dtb.sh  remote-build.sh  run-bde-validate.sh  schan_diag.c
sdk/: CMakeLists.txt  README.md
sdk/include/: bcm56846.h  bcm56846_regs.h  bcm56846_types.h  bde_ioctl.h  i2c.h  sbus.h
sdk/src/: attach.c  bde_ioctl.c  config.c  ecmp.c  i2c.c  init.c  init_datapath.c  l2.c  l3.c  pktio.c  port.c  reg.c  sbus.c  schan.c  serdes.c  soc.c  stats.c  vlan.c  wc_ucode_b0.c
switchd/: CMakeLists.txt  README.md
switchd/src/: link_state.c  main.c  netlink.c  port_config.c  tun.c  tx_rx.c
tests/: CMakeLists.txt  bde_validate.c
tools/: cpld-ctl.c  ppc32-toolchain.cmake
tools/diag/: retimer_init_10g.py  sfp_tx_enable.py
